S3にも出力、S3から定義ファイルを取得

--- a/extra.conf
+++ b/extra.conf
@@ -8,24 +8,24 @@
 [FILTER]
     Name parser
     Match *
-    Key_Name loggggggg
+    Key_Name log
     Parser nginx 
 # CloudWatch logsへの出力
 [OUTPUT]
     Name cloudwatch_logs
     Match  *
     region ap-northeast-1
-    log_group_name fluentlog
-    log_stream_prefix firelens
-    auto_create_group On
+    log_group_name /ecs/stag-yamada-nginx-via-firelens
+    log_stream_prefix nginx-
+    auto_create_group true
 
 # S3への出力
-# [OUTPUT]
-#     Name s3
-#     Match *
-#     bucket k-umehara-log-output
-#     region ap-northeast-1
-#     total_file_size  1M
-#     use_put_object On
-#     compression gzip
-#     s3_key_format /$TAG/%Y/%m/%d/%H/%M/%S/$UUID.gz
+[OUTPUT]
+    Name s3
+    Match *
+    bucket nginx-log-via-fluentbit
+    region ap-northeast-1
+    total_file_size  1KB
+    use_put_object On
+    compression gzip
+    s3_key_format /$TAG/%Y/%m/%d/%H/%M/%S/$UUID.gz
