--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,12 @@
 ### Terraform ###
 # Local .terraform directories
 **/.terraform/*
+.terraform.lock.hcl
 
 # .tfstate files
 *.tfstate
 *.tfstate.*
+
 
 # Crash log files
 crash.log
