--- a/extra.conf
+++ b/extra.conf
@@ -25,7 +25,7 @@
     Match *
     bucket nginx-log-via-fluentbit
     region ap-northeast-1
-    total_file_size  1KB
+    total_file_size  10MB
     use_put_object On
     compression gzip
     s3_key_format /$TAG/%Y/%m/%d/%H/%M/%S/$UUID.gz
